--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- MAIN -->
     <main>
         <div class="zoneOptions">
-            <p>Choisissez votre option et tapez la proposition qui s'affiche dans le champ en-dessous.</p>
+            <p>Bijour Choisissez votre option et tapez la proposition qui s'affiche dans le champ en-dessous.</p>
             <div class="optionSource">
                 <input type="radio" name="optionSource" id="mots" value="1" checked>
                 <label for="mots">Mots</label>
